--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -50,6 +50,13 @@ section p{
     height: 180px;
     width: auto;
 }
+.imgpresentationresp img{
+    height: 120px;
+    width: 340px;
+    margin-left: 10px;
+    display: none;
+}
+
 aside label{
     display: none;
 }
@@ -120,6 +127,15 @@ img:hover{
     }
     .logomenu img{
         display: none;
+    }
+    section h1{
+        font-size: 40px;
+    }
+    .imgpresentation img{
+        display: none;
+    }
+    .imgpresentationresp img{
+        display: block;
     }
 }
 
