--- a/assets/css/inscription.css
+++ b/assets/css/inscription.css
@@ -21,7 +21,9 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 100vh; 
+    margin-top: 30px;
+    margin-bottom: 30px;
     width: 100%;
     background: url(../images/wallpapers/mafia11.jpg)no-repeat;
     background-position: center;
@@ -135,7 +137,10 @@ button{
     align-items: center;
     box-shadow: rgba(110, 12, 12, 0.56) 0px 2px 12px 4px;
 }
-
+#passwordError{
+    display: flex;
+    justify-content: center;
+}
 /* Media queries */
 @media screen and (max-width: 600px){
     nav .onglets .link, nav h1
