--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -181,7 +181,17 @@ text-align: center;
 
 }
 /*Fin Pop Up*/
-
+.linkbouton{
+    display: inline-block;
+    padding: 5px 30px;
+    background-color: #ffffff;
+    color: #010101;
+    margin-left: 5px;
+    margin-bottom: 10px;
+    text-decoration: none;
+    border-radius: 5px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
 /* Media queries */
 
 @media screen and (max-width: 600px){
