--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,29 +1,29 @@
 @font-face {
     font-family: 'gta';
-    src: url('../police/gta.ttf');
+    src: url("../police/gta.ttf");
 }
-.gta{
+.gta {
     font-family: 'gta', Courier, monospace;
 }
-body{
+body {
     font-family: 'Open Sans', sans-serif;
-    margin: 0px;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
     background-color: #000;
 }
 
-section{
+section {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh; 
+    min-height: 100vh;
     width: 100%;
     background: url(../images/rockstar/cj.png)no-repeat;
     background-position: center;
     background-size: cover;
 }
 
-.form-box{
+.form-box {
     position: relative;
     width: 400px;
     height: 500px;
@@ -33,10 +33,10 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.56) 0px 2px 12px 4px;
+    box-shadow: rgba(0, 0, 0, 0.56) 0 2px 12px 4px;
 }
 
-h2{
+h2 {
     font-family: 'gta', Courier, monospace;
     font-size: 3em;
     color: #000000;
@@ -45,19 +45,20 @@ h2{
     margin: 0;
 }
 
-.inputbox{
+.inputbox {
     position: relative;
     margin: 10px 0;
     width: 100%;
 }
-.inputbox input,.inputbox textarea {
+.inputbox input,
+.inputbox textarea {
     margin-top: 10px;
     width: 100%;
 }
-.inputbox textarea{
+.inputbox textarea {
     height: 90px;
 }
-button{
+button {
     width: 100%;
     height: 40px;
     border-radius: 40px;
