--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,23 +1,26 @@
 /* Footer */
-footer{
+footer {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     color: #000;
     background-color: #fff;
     width: 100%;
 }
-.social-media{
+.social-media {
     padding-top: 18px;
 }
-.social-media a{
+.social-media a {
     font-size: 20px;
     padding-left: 10px;
 }
-.cgu p a{
+.cgu p a {
     color: #000;
     text-decoration: none;
 }
-.cgu p a:hover{
+p{
+    padding-left: 5px;
+}
+.cgu p a:hover {
     color: rgb(248, 41, 41);
 }
 /* Fin footer */
