--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,34 +1,35 @@
-header{
+header {
     width: 100%;
 }
 
 /* Barre de navigation */
-nav{
+nav {
     display: flex;
-    flex-wrap: wrap;/*dropdown*/
+    flex-wrap: wrap;
+    /*dropdown*/
     justify-content: space-between;
     padding: 10px;
     background-color: #fff;
     position: sticky;
     top: 0;
 }
-nav .option{
+nav .option {
     display: flex;
     justify-content: center;
 }
-.logomenu img{
+.logomenu img {
     width: 60px;
     height: auto;
     margin-left: 30px;
 }
-nav h1{
-    font-size: 20px; 
+nav h1 {
+    font-size: 20px;
 }
-nav .onglets{
+nav .onglets {
     display: flex;
     flex-wrap: wrap;
 }
-nav .onglets a{
+nav .onglets a {
     font-size: 17px;
     margin-right: 10px;
     margin-top: 18px;
@@ -36,16 +37,16 @@ nav .onglets a{
     color: black;
     text-decoration: none;
 }
-nav .onglets a:hover{
+nav .onglets a:hover {
     color: rgb(10, 114, 199);
 }
-nav .onglets p{
+nav .onglets p {
     font-size: 20px;
     margin-right: 10px;
     margin-top: 18px;
     cursor: pointer;
 }
-nav .onglets input{
+nav .onglets input {
     margin: 8px 20px;
     padding: 15px;
     border-radius: 30px;
@@ -54,14 +55,13 @@ nav .onglets input{
     background-color: #f2f2f2;
 }
 
-
 /*Menu Deroulant*/
-.dropdown{
+.dropdown {
     width: 100%;
     border: 1px solid black;
     border-radius: 4px;
 }
-.dropdown::before{
+.dropdown::before {
     content: '';
     position: absolute;
     top: 23px;
@@ -73,10 +73,10 @@ nav .onglets input{
     transform: rotate(40deg);
     transition: 0.5s;
 }
-.dropdown.active::before{
+.dropdown.active::before {
     right: 20px;
 }
-.dropdown::after{
+.dropdown::after {
     content: '';
     position: absolute;
     top: 23px;
@@ -88,10 +88,10 @@ nav .onglets input{
     transform: rotate(-40deg);
     transition: 0.5s;
 }
-.dropdown.active::after{
+.dropdown.active::after {
     right: 28px;
 }
-.dropdown .option{
+.dropdown .option {
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -104,60 +104,55 @@ nav .onglets input{
     visibility: hidden;
     opacity: 0;
 }
-.dropdown.active .option{
+.dropdown.active .option {
     visibility: visible;
     opacity: 1;
 }
-.dropdown .option a{
+.dropdown .option a {
     padding: 12px 20px;
     cursor: pointer;
     text-decoration: none;
 }
-.dropdown .option a:hover{
+.dropdown .option a:hover {
     background-color: #2b2a2a;
     color: rgb(10, 114, 199);
 }
-.bars i{
+.bars i {
     padding: 5px;
 }
 /* Fin barre de navigation */
 
-
 /* Media queries */
-@media screen and (max-width: 600px){
-    nav .onglets .link, nav h1
-    {
+@media screen and (max-width: 600px) {
+    nav .onglets .link,
+    nav h1 {
         display: none;
     }
-    nav 
-    {
+    nav {
         display: flex;
         justify-content: space-evenly;
     }
-    .logomenu img{
+    .logomenu img {
         display: none;
     }
 }
-@media screen and (min-width:1000px){
-    .dropdown
-    {
+@media screen and (min-width:1000px) {
+    .dropdown {
         display: none;
     }
 }
-@media screen and (max-width: 1000px){
-    nav .onglets .link, nav h1
-    {
+@media screen and (max-width: 1000px) {
+    nav .onglets .link,
+    nav h1 {
         display: none;
     }
-    nav 
-    {
+    nav {
         display: flex;
         justify-content: space-evenly;
     }
-    .logomenu img{
+    .logomenu img {
         display: none;
     }
 }
-
 
 /* Fin Media queries */
