--- a/assets/css/categorie.css
+++ b/assets/css/categorie.css
@@ -91,6 +91,18 @@ body{
 .bouton-a {
     text-align: center;
 }
+.video {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+.video .iframe {
+    border: none;
+    border-radius: 10px;
+    width: 100%;
+    height: 400px;
+}
 
 /* Media queries */
 @media screen and (max-width: 600px) {
@@ -137,6 +149,7 @@ body{
     .btn-danger, .btn-primary {
         margin: 2px;
     }
+
     
 }
 @media screen and (max-width:412px) {
@@ -145,6 +158,10 @@ body{
         width: 250px;
         margin-left: 60px;
     }
+    .video {
+        display: block;
+    }
+
 }
 
 /* Fin Media queries */
